added responsive design

--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>Mod_2 Solution</title>
     <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <h1>Sports</h1>
-        <div></div>
-        <section id="box">
-            <h4 class="heading" id="p1">Tennis</h4>
+        <section class="col-lg-3 col-md-6 col-sm-12 box">
+            <h4 class="heading " id="p1">Tennis</h4>
             <p id="content">shgdh kjhjdhj hghdh lorfn dhjhfjkd kjhbf ewueit ghghs ljjhjsxdf fcnjhgf
                 dfhdgf hgghjf lfhjdf baewfej bzdcifout stfyfgd sdh hsjkdh akjuuye
                 gdfgdkf vncmi asdti sgdwotgr bvnmm,vcivm hsgdio hjjlklsd.
             </p>
     
         </section>
-        <section id="box">
-            <h4 class="heading" id="p2">Football</h4>
+        <section class="col-lg-3 col-md-6 col-sm-12 box">
+            <h4 class="heading " id="p2">Football</h4>
             <p id="content">shgdh kjhjdhj hghdh lorfn dhjhfjkd kjhbf ewueit ghghs ljjhjsxdf fcnjhgf
                 dfhdgf hgghjf lfhjdf baewfej bzdcifout stfyfgd sdh hsjkdh akjuuye
                 ghdgkjfhdkj kjhjdhf hjdhlfjk houhdkn sdksjkjki fidjfh oeurutey vbnnmxv.
             </p>
             
         </section>
-        <section id="box">
+        <section class="col-lg-3 col-md-12 col-sm-12 box">
             <h4 class="heading" id="p3">Cricket</h4>
             <p id="content">shgdh kjhjdhj hghdh lorfn dhjhfjkd kjhbf ewueit ghghs ljjhjsxdf fcnjhgf
                 dfhdgf hgghjf lfhjdf baewfej bzdcifout stfyfgd sdh hsjkdh akjuuye
